src/test/resources/de/cd4analysis/cocos/invalid/a0134.cd
package de.cd4analysis.cocos;

classdiagram a0134 {

}